🐛 Fixed content overflow on mobile
closes https://github.com/TryGhost/Casper/issues/464
- setting max-width of `kg-markdown-card` wrapper that is still used by non-Koenig posts

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1831,7 +1831,7 @@ Usage (In Ghost editor):
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 920px;
+    max-width: 100%;
 }
 
 .post-template .kg-card-markdown > p:first-child {
